# sim

./: .gitignore  CMakeLists.txt
BlForceSensorTool/: BlForceSensorTool.cpp  BlForceSensorTool.h  CMakeLists.txt
sensor/: CMakeLists1.txt  sensor.c  sensor.h
serialport/: libserialport.h
serialport/mac/: libserialport.0.dylib
serialport/win/win32/: serialport.lib
serialport/win/x64/: serialport.lib
test/mac/: CMakeLists.txt  simple_test.c
test/win/win32/: CMakeLists.txt  simple_test.c
